--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "cc",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "chai": "3.5.0",
-    "express": "4.0.0",
-    "http-status-codes": "1.0.6",
-    "jsonfile": "2.4.0",
-    "lodash": "4.16.6",
-    "mocha": "2.5.3",
-    "nodemon": "^1.18.3",
-    "request": "2.83.0",
-    "underscore": "1.8.3"
-  },
-  "author": "Devesh Mehta",
-  "license": "ISC"
+    "name": "starterapp",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "dependencies": {
+        "chai": "3.5.0",
+        "express": "^4.0.0",
+        "http-status-codes": "1.0.6",
+        "lodash": "^4.16.6",
+        "mocha": "2.5.3",
+        "nodemon": "^1.18.3",
+        "request": "2.83.0"
+    },
+    "author": "Devesh Mehta",
+    "license": "ISC"
 }
